<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo1"
            android:id="@+id/logoImage" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/login_password"
            android:id="@+id/registerPassword"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/emailRegister"
            app:layout_constraintEnd_toEndOf="@+id/emailRegister"
            app:layout_constraintStart_toStartOf="@+id/emailRegister" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/login_password"
            android:id="@+id/registerPasswordRe"
            app:layout_constraintEnd_toEndOf="@+id/registerPassword"
            app:layout_constraintStart_toStartOf="@+id/registerPassword"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/registerPassword"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton" app:layout_constraintEnd_toEndOf="@+id/registerPasswordRe"
            app:layout_constraintStart_toStartOf="@+id/registerPasswordRe" android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@android:color/white" android:textStyle="bold" android:background="@color/colorPrimary"
            android:textSize="18sp"
    />
    <TextView
            android:text="@string/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/logoImage"
            app:layout_constraintStart_toStartOf="@+id/logoImage" android:textSize="24sp" android:textStyle="bold"
            android:textColor="@color/colorPrimaryLight" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/logoImage" app:layout_constraintHorizontal_bias="0.494"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/registerProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:indeterminate="true"
            android:background="@color/colorPrimaryLight"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/login_email"
            android:id="@+id/emailRegister"
            app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>