<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="348dp"
            android:layout_height="146dp" tools:srcCompat="@drawable/logo1"
            android:id="@+id/loginLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:srcCompat="@drawable/logo1"
            android:scaleType="fitXY"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmail"
            app:layout_constraintStart_toStartOf="@+id/loginLogo"
            app:layout_constraintEnd_toEndOf="@+id/loginLogo" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/login_email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/loginEmail"
            app:layout_constraintStart_toStartOf="@+id/loginEmail" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/login_password" android:imeOptions="actionDone"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/loginButton" app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText" app:layout_constraintHorizontal_bias="0.479"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:textSize="20sp" android:textStyle="bold|italic" android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="invisible"
            android:indeterminate="true"
            android:background="@color/colorPrimaryLight"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/ic_mirroredarrow"
            android:id="@+id/imageView2"
            android:tint="@color/colorPrimaryLight"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/registerNowText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/register_now_text"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerNowText" android:textSize="24sp"
            android:textAlignment="center" android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            android:layout_marginBottom="48dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2" app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/ic_arrow_png"
            android:id="@+id/imageView3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/registerNowText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>